# mimi-ros2-ws

./: .gitignore  0-dev-install.sh  1-clean-all.sh  2-build-all.sh  3-run-all.sh  LICENSE  README.md  open-in-clion.sh
.run/: BuildAll.run.xml  Run mimi_common.run.xml
.run-clion/: Build mimi_common.run.xml
src/mimi_ble/: CMakeLists.txt  build-commands.sh  open-in-pycharm.sh  package.xml  run-commands.sh  setup.cfg  setup.py
src/mimi_ble/include/mimi_ble/: ble_uart_client.h
src/mimi_ble/mimi_ble/: ble_client.py  ble_node.py
src/mimi_ble/src/: ble_node.cpp  ble_uart_client.cpp
src/mimi_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/mimi_bringup/config/: params.yaml
src/mimi_bringup/launch/: launch.py
src/mimi_common/: CMakeLists.txt  build-commands.sh  compile_commands.json  package.xml  run-commands.sh
src/mimi_common/src/: control_mode_manager.h  drive_manager.h  gamepad_node.cpp  headlights_manager.h  publisher_lambda_function.cpp  screen_animation_manager.h  subscriber_lambda_function.cpp  types.h
src/mimi_interfaces/: CMakeLists.txt  package.xml
